--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,7 +46,8 @@
     "string.h": "c",
     "tracker_data1.h": "c",
     "limits": "c",
-    "type_traits": "c"
+    "type_traits": "c",
+    "vol_table.h": "c"
   },
   "cmake.configureOnOpen": true,
   "idf.port": "/dev/cu.wchusbserial56280085231"
